<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:textSize="40sp"/>

        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="80sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/name"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/pd_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="-15sp"
                        android:inputType="text"
                        android:autofillHints="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pd_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:height="45sp"
                        android:gravity="center_vertical"
                        android:padding="10sp"
                        android:text="@string/dd_mm_yyyy"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/gender"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:padding="5dp"
                            android:background="@drawable/outer_border_lt"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/male_select"
                                android:layout_width="70dp"
                                android:layout_height="45dp"
                                android:padding="5dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:text="@string/male"/>
                            <TextView
                                android:id="@+id/female_select"
                                android:layout_width="70dp"
                                android:layout_height="45dp"
                                android:padding="5dp"
                                android:textStyle="bold"
                                android:layout_toEndOf="@id/male_select"
                                android:gravity="center"
                                android:background="@android:color/white"
                                android:text="@string/female"/>
                            <TextView
                                android:id="@+id/other_select"
                                android:layout_width="70dp"
                                android:layout_height="45dp"
                                android:layout_toEndOf="@id/female_select"
                                android:padding="5dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:background="@color/colorWhite"
                                android:text="@string/other"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="-15sp"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:autofillHints="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/email"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="-15sp"
                        android:inputType="textEmailAddress"
                        android:enabled="false"
                        android:autofillHints="" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlayout"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/bg_ui"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:id="@+id/editProfile_cancel"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@drawable/bg_ui"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:id="@+id/editProfile_update"/>

    </LinearLayout>

</RelativeLayout>