<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassswordActivity"
    android:id="@+id/changePasswordlayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10sp"
            app:cardElevation="4sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/current_password"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="-15sp"
                    android:layout_marginRight="10sp"
                    android:autofillHints=""
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/new_password"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="-15sp"
                    android:layout_marginRight="10sp"
                    android:autofillHints=""
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/retype_new_password"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="-15sp"
                    android:layout_marginRight="10sp"
                    android:autofillHints=""
                    android:inputType="textPassword" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        android:layout_below="@+id/cv">

        <Button
            android:id="@+id/editProfile_cancel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/bg_ui"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/editProfile_update"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/bg_ui"
            android:text="@string/update" />

    </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>