<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/maintoolbar"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        app:navigationIconTint="@color/black"
        android:theme="@style/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageButton
        android:id="@+id/editBtn"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_below="@+id/maintoolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="15sp"
        android:background="@color/colorWhite"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_edit_24" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/editBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        android:layout_below="@+id/profile_image">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="10sp"
            android:layout_margin="10sp"
            app:cardElevation="4sp"
            app:cardBackgroundColor="#EDDDED">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp">

                <TableRow android:padding="10sp">

                    <TextView
                        android:paddingEnd="50sp"
                        android:text="@string/name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof_name"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow android:padding="10sp">

                    <TextView
                        android:paddingEnd="50sp"
                        android:text="@string/dob"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof_dob" />
                </TableRow>

                <TableRow android:padding="10sp">

                    <TextView
                        android:paddingEnd="50sp"
                        android:text="@string/gender"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof_gender" />
                </TableRow>

                <TableRow android:padding="10sp">

                    <TextView
                        android:paddingEnd="50sp"
                        android:text="@string/email"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof_email" />
                </TableRow>
                <TableRow android:padding="10sp">

                    <TextView
                        android:paddingEnd="50sp"
                        android:text="@string/phone"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof_phone"
                        android:maxLength="10"/>
                </TableRow>
            </TableLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_dash"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:paddingTop="6sp"
        android:paddingBottom="4sp"
        app:itemIconSize="26sp"
        app:itemIconTint="@drawable/navigation_view_colored"
        app:itemTextColor="@drawable/navigation_view_colored"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>