<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="230sp"
        android:background="@drawable/header_login"
        android:elevation="5sp" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="40sp"
        android:elevation="5sp"
        android:text="@string/welcome_to_ttr"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDesc"
        android:transitionName="tvLogin"
        android:layout_alignStart="@+id/tvDesc"
        android:elevation="5sp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134sp"
        android:layout_height="134sp"
        android:layout_below="@+id/bgHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-80sp"
        android:layout_marginEnd="-100sp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134sp"
        android:layout_height="134sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-100sp"
        android:layout_marginBottom="50sp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182sp"
        android:layout_height="182sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-80sp"
        android:layout_marginBottom="-30sp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134sp"
        android:layout_height="134sp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-50sp"
        android:layout_marginBottom="-50sp"
        android:layout_toStartOf="@+id/circle3"
        android:src="@drawable/circletransparant" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:padding="5sp"
                        android:text="@string/email"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="-15sp"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        android:autofillHints="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:padding="5sp"
                        android:text="@string/password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="-15sp"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:autofillHints="" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignStart="@+id/cv"
                android:layout_alignEnd="@+id/cv"
                android:layout_marginLeft="35sp"
                android:layout_marginTop="-50sp"
                android:layout_marginRight="35sp"
                android:elevation="10sp">

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Wave"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:elevation="10sp"
                    android:padding="5sp"
                    android:visibility="gone"
                    app:SpinKit_Color="@color/colorWhite" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_ui"
                    android:drawablePadding="5sp"
                    android:text="LOGIN"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:elevation="5sp"
                android:text="@string/forgot_your_password"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgot"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:elevation="5sp"
                android:text="@string/new_user_sign_up"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>